Removed a few unneeded gradient prefixes from the html background and added a fixed attribute to fix a bug with the gradient background repeating instead of stretching.

--- a/assets/scss/base/_scaffolding.scss
+++ b/assets/scss/base/_scaffolding.scss
@@ -15,13 +15,10 @@ html {
   overflow-y: scroll;
   height: 100%;
   background: $green;
-  background: -moz-linear-gradient(top, $green 0%, $blue 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, $green), color-stop(100%, $blue));
-  background: -webkit-linear-gradient(top, $green 0%, $blue 100%);
-  background: -o-linear-gradient(top, $green 0%, $blue 100%);
-  background: -ms-linear-gradient(top, $green 0%, $blue 100%);
-  background: linear-gradient(to bottom, $green 0%, $blue 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2ECC71', endColorstr='#3498DB',GradientType=0 ); }
+  background: -moz-linear-gradient(top, $green 0%, $blue 100%) fixed;
+  background: -webkit-linear-gradient(top, $green 0%, $blue 100%) fixed;
+  background: linear-gradient(to bottom, $green 0%, $blue 100%) fixed;
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2ECC71', endColorstr='#3498DB',GradientType=0 ) fixed; }
 
 body {
   min-height: 100%;
